--- a/online grocery- store/index.html
+++ b/online grocery- store/index.html
@@ -26,10 +26,10 @@
         </div>
 
         <ul>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">About Us</a></li>
-            <li class="item"><a href="#">Services</a></li>
-            <li class="item"><a href="#">Contact Us</a></li>
+            <li class="item"><a href="#home">Home</a></li>
+            <li class="item"><a href="#clients">About Us</a></li>
+            <li class="item"><a href="#services">Services</a></li>
+            <li class="item"><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
 
